@@ -615,7 +615,6 @@ public class Computer
         m_apis.add( new PeripheralAPI( m_apiEnvironment ) );
         m_apis.add( new OSAPI( m_apiEnvironment ) );
         m_apis.add( new BitAPI( m_apiEnvironment ) );
-        m_apis.add( new TimeUtilsAPI() );
         //m_apis.add( new BufferAPI( m_apiEnvironment ) );
         if( ComputerCraft.http_enable )
         {
