@@ -12,8 +12,8 @@ os.clock()
 os.startTimer( timeout )
 os.cancelTimer( token )
 os.sleep( timeout )
-os.time()
-os.day()
+os.time( [source] )
+os.day( [source] )
 os.setAlarm( time )
 os.cancelAlarm( token )
 os.shutdown()
